<resources>
    <!-- English Strings -->
    <string name="app_name">Medication Management</string>
    <string name="choose_language">Choose Language</string>
    <string name="language_ukrainian">Ukrainian</string>
    <string name="language_english">English</string>
    <string name="medicines">Medicines</string>
    <string name="devices">Devices</string>
    <string name="conditions">Conditions</string>
    <string name="logs">Logs</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="category">Category</string>
    <string name="quantity">Quantity</string>
    <string name="expiry_date">Expiry Date (yyyy-MM-dd)</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save_changes">Save Changes</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="create">Create</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="hint_reg">Don\'t have an account? Register</string>
    <string name="hint_log">Already have an account? Log in</string>
    <string name="register">Register</string>
    <string name="search_hint">Search medicine...</string>
    <string name="device_location">Location</string>
    <string name="device_status">Status</string>
    <string name="device_type">Device Type</string>
    <string name="device_search_hint">Search device...</string>
    <string name="device_temp_range">Temperature Range</string>
    <string name="device_humidity_range">Humidity Range</string>
    <string name="toggle_device">Toggle Device Status</string>
    <string name="parameters">Parameters</string>
    <string name="min_temp">Min Temperature</string>
    <string name="max_temp">Max Temperature</string>
    <string name="min_humidity">Min Humidity</string>
    <string name="max_humidity">Max Humidity</string>
    <string name="add_device">Add Device</string>
    <string name="search_condition">Search conditions (Device Id, °C, %)</string>
    <string name="condition_device">Device: 0</string>
    <string name="condition_temp">Temperature: 0°C</string>
    <string name="condition_humidity">Humidity: 0%</string>
    <string name="condition_time">Timestamp: ...</string>
    <string name="log_action">Action</string>
    <string name="log_user">User</string>
    <string name="log_details">Details</string>
    <string name="log_timestamp">Timestamp</string>
    <string name="log_audit">Audit Logs</string>
    <string name="log_search">Search logs...</string>
</resources>