<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#f7f7f7">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/addType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/device_type"
            android:inputType="text" />

        <EditText
            android:id="@+id/addLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/device_location"
            android:inputType="text"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/addParams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/parameters"
            android:inputType="text"
            android:layout_marginTop="8dp" />

        <CheckBox
            android:id="@+id/addIsActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_status"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/addMinTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/min_temp"
            android:inputType="numberDecimal"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/addMaxTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/max_temp"
            android:inputType="numberDecimal"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/addMinHumidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/min_humidity"
            android:inputType="numberDecimal"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/addMaxHumidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/max_humidity"
            android:inputType="numberDecimal"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/addDeviceBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/add_device"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>