<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="12dp"
    android:layout_marginBottom="8dp"
    android:elevation="2dp">

    <TextView
        android:id="@+id/conditionDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/condition_device"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/conditionTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/condition_temp" />

    <TextView
        android:id="@+id/conditionHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/condition_humidity" />

    <TextView
        android:id="@+id/conditionTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/condition_time" />
</LinearLayout>