<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:gravity="center" android:background="#f4f4f4">

    <TextView
        android:text="@string/choose_language"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnLangUa"
        android:text="@string/language_ukrainian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnLangEn"
        android:text="@string/language_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>