<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/medicines"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/addMedicineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#6200EE"
        android:textColor="@android:color/white"
        android:text="@string/add_medicine" />

    <EditText
        android:id="@+id/searchField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint"
        android:drawableStart="@android:drawable/ic_menu_search"
        android:padding="12dp"
        android:layout_marginBottom="8dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/medicineRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>